--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
   "homepage": "https://joezcode.github.io/portfolio",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^3.2.3",
     "json-loader": "^0.5.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -20,11 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
